2009-10-31  Maksim Kotlyar <mkotlar@ukr.net>
  * replace <? with <?php
  * remove ?>
  * Warning: Playlist::fromSimpleXMLElement() [playlist.fromsimplexmlelement]: Node no longer exists
  * Rename var $userlist to $userlists on User::getPlaylists() line 371.
  * PHP 5.3 Strict standards: Static function Caller::getInstance() should not be abstract
  * PHP 5.3 Strict standards: Accessing static property DefaultCachePolicy::$MINUTE as non static

2009-01-31	Felix Bruns <felixbruns@web.de>

	* PaginatedResult implements Countable
	* Fixed typo in Util class


2008-12-27	Felix Bruns <felixbruns@web.de>

	* PaginatedResult implements Iterator
	* $size parameter of Media::getImage is now optional


2008-12-22	Felix Bruns <felixbruns@web.de>

	* Added Shout class
	* Added artist.getShouts
	* Added event.getShouts
	* Added user.getShouts
	* Added venue.getEvents
	* Added venue.getPastEvents
	* Added venue.search


2008-12-17	Felix Bruns <felixbruns@web.de>

	* Added more documentation comments
	* Added MemoryCache class


2008-12-09	Felix Bruns <felixbruns@web.de>

	* Fixed bug in SqliteCache
	* Added CallerFactory
	* Added CurlCaller, PeclCaller, SocketCaller
	* Made Caller abstract


2008-12-08	Felix Bruns <felixbruns@web.de>

	* Fixed user.getRecommendedEvents
	* Added user.getRecommendedArtists
	* Added group.getMembers
	* Added CHANGELOG
	* Added lastfm.api.php (autoloading classes)
	* Changed User-Agent to "PHP last.fm API (PHP/<version>)"


2008-12-07	Felix Bruns <felixbruns@web.de>

	* Fixed several bugs
	* Added SqliteCache class
	* Added DiskCache class
	* Added support for caching
	* Added LICENSE and README


2008-12-06	Felix Bruns <felixbruns@web.de>

	* Fixed some bugs
	* Added Error class (Exception)
	* Added a lot of documentation comments


2008-12-03	Felix Bruns <felixbruns@web.de>

	* Initial version